prova 1 freccia destra

--- a/cs/style.css
+++ b/cs/style.css
@@ -7,3 +7,23 @@
 
 
 /* /COMMINT */
+
+/* container generale */
+#container {
+    width: 100%;
+    height: 100vh;
+    background-color: black;
+}
+/* /container generale */
+
+/* conteiner immagine */
+
+/* /conteiner immagine */
+
+/* freccia avanti */
+
+/* /freccia avanti */
+
+/* freccia indietro */
+
+/* /freccia indietro */
