--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@
     display: flex;
     justify-content: space-between;
     margin: auto;
+    position: relative;
     /* background-color: blue; */
  } 
 
@@ -47,3 +48,28 @@
 }
 
 /* /freccie */
+
+
+/*barra centrale*/
+
+#bar {
+    height: 30px;
+    padding: 0 10px;
+    border-radius: 50px;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    left: 50%;
+    top: 80%;
+    background-color: greenyellow;
+}
+
+.fa-circle {
+    margin:0  5px;
+    cursor: pointer;
+}
+
+.active {
+    color:red;
+}
+/*/barra centrale*/
